--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         2014-2019
       </td>
       <td>
-        Worked with Ms.Mia Khalifa
+        Worked with Mr.Joe Biden
       </td>
     <tr>
       <td>
@@ -137,7 +137,7 @@
     </tr>
     <tr>
       <td>
-      Alpha Male ⚡⚡⚡⚡⚡⚡⚡⚡⚡
+      IQ ⚡⚡⚡⚡⚡⚡⚡⚡⚡
       </td>
       <td>
       Html ⚡⚡⚡
